--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,107 @@
 name: astro
 channels:
+  - conda-forge
   - defaults
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - argon2-cffi=20.1.0=py39h3811e60_2
+  - async_generator=1.10=py_0
+  - attrs=20.3.0=pyhd3deb0d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - bleach=3.3.0=pyh44b312d_0
+  - ca-certificates=2020.12.5=ha878542_0
+  - certifi=2020.12.5=py39hf3d152e_1
+  - cffi=1.14.5=py39he32792d_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - importlib-metadata=3.7.3=py39hf3d152e_0
+  - ipykernel=5.5.0=py39hef51801_1
+  - ipython=7.21.0=py39hef51801_0
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.18.0=py39hf3d152e_2
+  - jinja2=2.11.3=pyh44b312d_0
+  - jsonschema=3.2.0=pyhd8ed1ab_3
+  - jupyter_client=6.1.12=pyhd8ed1ab_0
+  - jupyter_core=4.7.1=py39hf3d152e_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - ld_impl_linux-64=2.35.1=hea4e1c9_2
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=9.3.0=h2828fa1_18
+  - libgomp=9.3.0=h2828fa1_18
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=9.3.0=h6de172a_18
+  - markupsafe=1.1.1=py39h3811e60_3
+  - mistune=0.8.4=py39h3811e60_1003
+  - nbclient=0.5.3=pyhd8ed1ab_0
+  - nbconvert=6.0.7=py39hf3d152e_3
+  - nbformat=5.1.2=pyhd8ed1ab_1
+  - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.4.3=pyhd8ed1ab_0
+  - notebook=6.3.0=py39hf3d152e_0
+  - openssl=1.1.1k=h7f98852_0
+  - packaging=20.9=pyh44b312d_0
+  - pandoc=2.12=h7f98852_0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.8.1=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pip=21.0.1=pyhd8ed1ab_0
+  - prometheus_client=0.9.0=pyhd3deb0d_0
+  - prompt-toolkit=3.0.18=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.8.1=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyrsistent=0.17.3=py39h3811e60_2
+  - python=3.9.2=hffdb5ce_0_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.9=1_cp39
+  - pyzmq=22.0.3=py39h37b5a0c_1
+  - readline=8.0=he28a2e2_2
+  - send2trash=1.5.0=py_0
+  - setuptools=49.6.0=py39hf3d152e_3
+  - six=1.15.0=pyh9f0ad1d_0
+  - sqlite=3.35.2=h74cdb3f_0
+  - terminado=0.9.3=py39hf3d152e_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.10=h21135ba_1
+  - tornado=6.1=py39h3811e60_1
+  - traitlets=5.0.5=py_0
+  - tzdata=2021a=he74cb21_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.36.2=pyhd3deb0d_0
+  - xz=5.2.5=h516909a_1
+  - zeromq=4.3.4=h9c3ff4c_0
+  - zipp=3.4.1=pyhd8ed1ab_0
+  - zlib=1.2.11=h516909a_1010
+  - pip:
+    - astropy==4.2
+    - blimpy==2.0.10
+    - cloudpickle==1.6.0
+    - cycler==0.10.0
+    - cython==0.29.22
+    - dask==2021.3.1
+    - fsspec==0.8.7
+    - h5py==3.2.1
+    - hdf5plugin==2.3.2
+    - kiwisolver==1.3.1
+    - llvmlite==0.36.0
+    - locket==0.2.1
+    - matplotlib==3.4.0
+    - numba==0.53.1
+    - numpy==1.20.2
+    - pandas==1.2.3
+    - partd==1.1.0
+    - pillow==8.1.2
+    - pyerfa==1.7.2
+    - pytz==2021.1
+    - pyyaml==5.4.1
+    - scipy==1.6.2
+    - toolz==0.11.1
+    - turbo-seti==2.0.15
 prefix: /home/lacker/miniconda3/envs/astro
