--- a/environment.yml
+++ b/environment.yml
@@ -1,52 +1,100 @@
 name: astro
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - argon2-cffi=20.1.0=py39h3811e60_2
   - async_generator=1.10=py_0
   - attrs=20.3.0=pyhd3deb0d_0
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
+  - black=20.8b1=py_1
+  - blas=1.0=openblas
   - bleach=3.3.0=pyh44b312d_0
+  - blosc=1.21.0=h9c3ff4c_0
+  - brotli=1.0.9=h9c3ff4c_4
+  - brunsli=0.1=h9c3ff4c_0
+  - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2020.12.5=ha878542_0
   - certifi=2020.12.5=py39hf3d152e_1
   - cffi=1.14.5=py39he32792d_0
+  - charls=2.1.0=he6710b0_2
+  - click=7.1.2=pyhd3eb1b0_0
+  - cloudpickle=1.6.0=py_0
+  - cudatoolkit=11.0.3=h15472ef_8
+  - cudnn=8.1.0.77=h90431f1_0
+  - cupy=8.6.0=py39h53c10af_0
+  - cutensor=1.2.2.5=h96e36e3_3
+  - cycler=0.10.0=py_2
+  - cytoolz=0.11.0=py39h3811e60_3
+  - dask-core=2021.4.0=pyhd8ed1ab_0
+  - dataclasses=0.8=pyhc8e2a94_1
   - decorator=4.4.2=py_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - entrypoints=0.3=pyhd8ed1ab_1003
+  - fastrlock=0.6=py39h2531618_0
+  - flask=1.1.2=py_0
+  - freetype=2.10.4=h0708190_1
+  - giflib=5.1.7=h516909a_1
+  - imagecodecs=2021.1.11=py39h581e88b_1
+  - imageio=2.9.0=py_0
   - importlib-metadata=3.7.3=py39hf3d152e_0
   - ipykernel=5.5.0=py39hef51801_1
   - ipython=7.21.0=py39hef51801_0
   - ipython_genutils=0.2.0=py_1
+  - itsdangerous=1.1.0=pyhd3eb1b0_0
   - jedi=0.18.0=py39hf3d152e_2
   - jinja2=2.11.3=pyh44b312d_0
+  - jpeg=9d=h36c2ea0_0
   - jsonschema=3.2.0=pyhd8ed1ab_3
   - jupyter_client=6.1.12=pyhd8ed1ab_0
   - jupyter_core=4.7.1=py39hf3d152e_0
   - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jxrlib=1.1=h7f98852_2
+  - kiwisolver=1.3.1=py39h1a9c180_1
+  - lcms2=2.11=hcbb858e_1
   - ld_impl_linux-64=2.35.1=hea4e1c9_2
+  - lerc=2.2.1=h9c3ff4c_0
+  - libaec=1.0.4=h9c3ff4c_1
+  - libdeflate=1.7=h7f98852_5
   - libffi=3.3=h58526e2_2
   - libgcc-ng=9.3.0=h2828fa1_18
+  - libgfortran-ng=7.3.0=hdf63c60_0
   - libgomp=9.3.0=h2828fa1_18
+  - libopenblas=0.3.13=h4367d64_0
+  - libpng=1.6.37=h21135ba_2
   - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=9.3.0=h6de172a_18
+  - libtiff=4.1.0=h2733197_1
+  - libwebp=1.0.2=hf4e8a37_4
+  - libzopfli=1.0.3=h9c3ff4c_0
+  - lz4-c=1.9.3=h9c3ff4c_0
   - markupsafe=1.1.1=py39h3811e60_3
+  - matplotlib-base=3.3.4=py39h62a2d02_0
   - mistune=0.8.4=py39h3811e60_1003
+  - mypy_extensions=0.4.3=py39hf3d152e_3
   - nbclient=0.5.3=pyhd8ed1ab_0
   - nbconvert=6.0.7=py39hf3d152e_3
   - nbformat=5.1.2=pyhd8ed1ab_1
+  - nccl=2.8.4.1=h96e36e3_3
   - ncurses=6.2=h58526e2_4
   - nest-asyncio=1.4.3=pyhd8ed1ab_0
+  - networkx=2.5.1=pyhd8ed1ab_0
   - notebook=6.3.0=py39hf3d152e_0
+  - numpy-base=1.19.2=py39h0f7b65f_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.4.0=hf7af979_0
   - openssl=1.1.1k=h7f98852_0
   - packaging=20.9=pyh44b312d_0
   - pandoc=2.12=h7f98852_0
   - pandocfilters=1.4.2=py_1
   - parso=0.8.1=pyhd8ed1ab_0
+  - pathspec=0.8.1=pyhd3deb0d_0
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pip=21.0.1=pyhd8ed1ab_0
@@ -60,48 +108,93 @@ dependencies:
   - python=3.9.2=hffdb5ce_0_cpython
   - python-dateutil=2.8.1=py_0
   - python_abi=3.9=1_cp39
+  - pywavelets=1.1.1=py39h1dff97c_3
   - pyzmq=22.0.3=py39h37b5a0c_1
   - readline=8.0=he28a2e2_2
+  - regex=2021.4.4=py39h3811e60_0
+  - scikit-image=0.17.2=py39h9cfe711_4
+  - scipy=1.6.2=py39hf56f3a7_0
   - send2trash=1.5.0=py_0
   - setuptools=49.6.0=py39hf3d152e_3
   - six=1.15.0=pyh9f0ad1d_0
+  - snappy=1.1.8=he1b5a44_3
   - sqlite=3.35.2=h74cdb3f_0
   - terminado=0.9.3=py39hf3d152e_0
   - testpath=0.4.4=py_0
+  - tifffile=2021.3.31=pyhd3eb1b0_1
   - tk=8.6.10=h21135ba_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - toolz=0.11.1=py_0
   - tornado=6.1=py39h3811e60_1
   - traitlets=5.0.5=py_0
+  - typed-ast=1.4.2=py39h3811e60_0
+  - typing_extensions=3.7.4.3=py_0
   - tzdata=2021a=he74cb21_0
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
+  - werkzeug=1.0.1=pyhd3eb1b0_0
   - wheel=0.36.2=pyhd3deb0d_0
   - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h516909a_0
   - zeromq=4.3.4=h9c3ff4c_0
+  - zfp=0.5.5=h9c3ff4c_5
   - zipp=3.4.1=pyhd8ed1ab_0
   - zlib=1.2.11=h516909a_1010
+  - zstd=1.4.5=h9ceee32_0
   - pip:
+    - alabaster==0.7.12
     - astropy==4.2
-    - blimpy==2.0.10
-    - cloudpickle==1.6.0
-    - cycler==0.10.0
+    - babel==2.9.0
+    - blimpy==2.0.11
+    - chardet==4.0.0
+    - cheroot==8.5.2
+    - cherrypy==18.6.0
+    - cupyimg==0.1.dev0
     - cython==0.29.22
     - dask==2021.3.1
+    - docutils==0.16
     - fsspec==0.8.7
     - h5py==3.2.1
     - hdf5plugin==2.3.2
-    - kiwisolver==1.3.1
+    - idna==2.10
+    - imagesize==1.2.0
+    - iniconfig==1.1.1
+    - jaraco-classes==3.2.1
+    - jaraco-collections==3.3.0
+    - jaraco-functools==3.3.0
+    - jaraco-text==3.5.0
     - llvmlite==0.36.0
     - locket==0.2.1
     - matplotlib==3.4.0
+    - more-itertools==8.7.0
     - numba==0.53.1
     - numpy==1.20.2
     - pandas==1.2.3
     - partd==1.1.0
     - pillow==8.1.2
+    - pluggy==0.13.1
+    - portend==2.7.1
+    - psutil==5.8.0
+    - py==1.10.0
     - pyerfa==1.7.2
+    - pytest==6.2.3
     - pytz==2021.1
     - pyyaml==5.4.1
-    - scipy==1.6.2
-    - toolz==0.11.1
+    - requests==2.25.1
+    - setigen==2.0.5
+    - snowballstemmer==2.1.0
+    - sphinx==3.5.3
+    - sphinx-rtd-theme==0.5.2
+    - sphinxcontrib-applehelp==1.0.2
+    - sphinxcontrib-devhelp==1.0.2
+    - sphinxcontrib-htmlhelp==1.0.3
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.3
+    - sphinxcontrib-serializinghtml==1.1.4
+    - tempora==4.0.2
+    - tqdm==4.60.0
     - turbo-seti==2.0.15
+    - urllib3==1.26.4
+    - wget==3.2
+    - zc-lockfile==2.0
 prefix: /home/lacker/miniconda3/envs/astro
